--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js + MongoDB: JWT Authentication & Authorization",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon reg.js"
+    "start": "node server.js"
   },
   "keywords": [
     "node.js",
